# OpenGLLearn

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/: App.cpp  App.h  CameraSystem.cpp  CameraSystem.h  config.cpp  config.h  main.cpp  material.cpp  material.h  shader.cpp  shader.h  triangle_mesh.cpp  triangle_mesh.h
src/components/: camera_component.h  physics_component.h  render_component.h  transform_component.h
src/controller/: app.cpp  app.h
src/factories/: entity.h  entity_manager.cpp  entity_manager.h  factory.cpp  factory.h
src/factories/game/: game.cpp  game.h
src/factories/world/: world.cpp  world.h  world_constants.h
src/factories/world/block/: block.cpp  block.h  block_id.h
src/factories/world/chunk/: chunk.cpp  chunk.h  chunk_manager.h  chunklet.cpp  chunklet.h
src/factories/world/generation/: terrain_generator.cpp  terrain_generator.h
src/shaders/: fragment.glsl  shader_manager.cpp  shader_manager.h  vertex.glsl
src/shaders/light/: vertex.glsl
src/systems/: camera_system.cpp  camera_system.h  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
src/view/: shader.cpp  shader.h
